<resources>
    <string name="app_name">LockScreen</string>
    <string name="text_active_admin">Please click "Active" Button to active admin permission.</string>
    <string name="btn_active">Active</string>
    <string name="text_lock">Lock</string>
    <string name="btn_shortcut">Add Shortcut</string>
    <string name="alert_create_shortcut">Shortcut was created.</string>
    <string name="text_shortcut_text">Shortcut Text：</string>
    <string name="text_shortcut_preview">Shortcut Preview：</string>
    <string name="btn_take_photo">Take photo</string>
    <string name="btn_pick_photo">Pick photo from gallery</string>
    <string name="text_select_icon">Please choose shortcut Icon,also can take new photo or pick from gallery</string>
    <string name="confirm">Confirm</string>
    <string name="text_create_shortcut">Create Shortcut</string>
    <string name="service_name">VoiceRecognitionService</string>
    <string name="cancel">Cancel</string>
    <string name="toast_get_admin">Please Active Admin by click "Active" button.</string>
    <string name="text_uninstall">uninstall app</string>
    <string name="alert_uninstall">"Are you sure uninstall "</string>
</resources>
