<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.roy.lockscreen.activity.MainActivity">


    <RelativeLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">


        <Button
            android:id="@+id/btn_shortcut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addShortCut"
            android:text="@string/btn_shortcut"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_shortcut"
            android:onClick="customShortcut"
            android:text="Custom Shortcut"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_active"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible"
        >

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_active_admin"/>


        <Button
            android:id="@+id/btn_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_tip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="activtAdmin"
            android:text="@string/btn_active"/>
    </RelativeLayout>
</RelativeLayout>
